# video-custom-udfs

./: README.md
GVASafetyGearIngestion/: Dockerfile  README.md  app_spec.json  config.json  docker-compose.yml  k8s-service.yml  module_spec.json
GVASafetyGearIngestion/helm/: values.yaml
GVASafetyGearIngestion/helm/templates/: gvasafetygearingestion.yaml
NativeOneAPIIngestion/: Dockerfile  README.md  config.json  docker-compose.yml
NativeOneAPIIngestion/dpcpp_blur_udf/: CMakeLists.txt  dpcpp_blur_udf.cpp  dpcpp_blur_udf.h
NativeOneAPIIngestion/helm/: values.yaml
NativeOneAPIIngestion/helm/templates/: nativeoneapiingestion.yaml
NativePclIngestion/: Dockerfile  README.md  config.json  docker-compose.yml
NativePclIngestion/helm/: values.yaml
NativePclIngestion/helm/templates/: nativepclingestion.yml
NativePclIngestion/rs2pcl/: CMakeLists.txt  rs2pcl.cpp  rs2pcl.h
NativeSafetyGearAnalytics/: Dockerfile  README.md  app_spec.json  config.json  docker-compose.yml  k8s-service.yml  module_spec.json
NativeSafetyGearAnalytics/helm/: values.yaml
NativeSafetyGearAnalytics/helm/templates/: nativesafetygearanalytics.yaml
NativeSafetyGearAnalytics/safety_gear_demo/: CMakeLists.txt  safety_gear_demo.cpp  safety_gear_demo.h
NativeSafetyGearAnalytics/safety_gear_demo/ref/: frozen_inference_graph_fp16.xml
NativeSafetyGearIngestion/: Dockerfile  app_spec.json  config.json  docker-compose.yml  k8s-service.yml  module_spec.json
NativeSafetyGearIngestion/helm/: values.yaml
NativeSafetyGearIngestion/helm/templates/: nativesafetygearingestion.yaml
PyMultiClassificationIngestion/: Dockerfile  README.md  app_spec.json  config.json  docker-compose.yml  k8s-service.yml  module_spec.json
PyMultiClassificationIngestion/helm/: values.yaml
PyMultiClassificationIngestion/helm/templates/: pythonmulticlassification.yaml
PyMultiClassificationIngestion/sample_classification/: multi_class_classifier.py
PyMultiClassificationIngestion/sample_classification/ref/: squeezenet1.1_FP16.xml  squeezenet1.1_FP32.xml
PySafetyGearAnalytics/: Dockerfile  README.md  app_spec.json  config.json  docker-compose.yml  k8s-service.yml  module_spec.json
PySafetyGearAnalytics/helm/: values.yaml
PySafetyGearAnalytics/helm/templates/: pythonsafetygearanalytics.yaml
PySafetyGearAnalytics/safety_gear/: safety_classifier.py
PySafetyGearAnalytics/safety_gear/ref/: frozen_inference_graph_fp16.xml
PySafetyGearIngestion/: Dockerfile  README.md  app_spec.json  config.json  docker-compose.yml  k8s-service.yml  module_spec.json
PySafetyGearIngestion/helm/: values.yaml
PySafetyGearIngestion/helm/templates/: pythonsafetygearingestion.yaml
